tests/bad/struct_method_redef_field.oc
/// fail: Field with name `len` already exists

struct Foo {
    len: i32
}

def Foo::len(this) {}
